--- a/index.html
+++ b/index.html
@@ -6,26 +6,23 @@
     <title>BOTGospel | Build Unshakeable Masculine Confidence</title>
 
     <!-- SEO & high-intent, problem-solution long-tail phrases (Toolkit §§5–6) -->
-    <meta name="description" content="Stop searching ‘how to build unshakeable confidence’. BOTGospel hands modern men the systematic blueprint to conquer engineered loneliness, master emotional control, and lead with ruthless empathy.">
+    <meta name="description" content="Stop searching 'how to build unshakeable confidence'. BOTGospel hands modern men the systematic blueprint to conquer engineered loneliness, master emotional control, and lead with ruthless empathy.">
     <meta name="keywords" content="how to build unshakeable confidence as a man, overcome approach anxiety, masculine confidence blueprint, systematic confidence reconstruction, emotional regulation power, brotherhood accountability, complete confidence overhaul">
 
-    <!-- =====================================================================
-         NEW ADDITION #1: Social Sharing Meta Tags
-         Customize the content URLs and image path for your domain.
-         ===================================================================== -->
+    <!-- Social Sharing Meta Tags -->
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://botgospel.netlify.app/"> <!-- Replace with your actual URL -->
+    <meta property="og:url" content="https://botgospel.netlify.app/">
     <meta property="og:title" content="BOTGospel | Build Unshakeable Masculine Confidence">
     <meta property="og:description" content="Our blueprints turn approach anxiety, fragile identity, and social hesitation into tactical advantages you command.">
-    <meta property="og:image" content="https://botgospel.netlify.app//assets/botgospel-share-image.jpg"> <!-- Replace with a 1200x630px share image URL -->
+    <meta property="og:image" content="https://botgospel.netlify.app/assets/botgospel-share-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://botgospel.netlify.app/"> <!-- Replace with your actual URL -->
+    <meta property="twitter:url" content="https://botgospel.netlify.app/">
     <meta property="twitter:title" content="BOTGospel | Build Unshakeable Masculine Confidence">
     <meta property="twitter:description" content="Our blueprints turn approach anxiety, fragile identity, and social hesitation into tactical advantages you command.">
-    <meta property="twitter:image" content="https://botgospel.netlify.app/assets/botgospel-share-image.jpg"> <!-- Replace with your share image URL -->
+    <meta property="twitter:image" content="https://botgospel.netlify.app/assets/botgospel-share-image.jpg">
 
     <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,11 +31,7 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <style>
-        /* =====================================================================
-           BOTGospel – CONVERSION-FOCUSED INDEX (2025-07)  |  v2.1 (Sealed)
-           Strategic copy aligned with Modern Man’s Toolkit §§4–6 guidelines
-           – Action-oriented language  – Tactical framing  – Future-self hooks
-           ===================================================================== */
+        /* BOTGospel – CONVERSION-FOCUSED INDEX (2025-07) | v2.1 (Sealed) */
 
         /* 1. CORE VARIABLES */
         :root {
@@ -47,7 +40,7 @@
             --border-subtle:rgba(255,255,255,0.1);--font-primary:'Inter',sans-serif;
         }
 
-        /* 2. RESET & GLOBAL • action-ready, fast load */
+        /* 2. RESET & GLOBAL */
         *,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
         html{scroll-behavior:smooth}
         body{background:var(--color-bg);color:var(--color-text);font-family:var(--font-primary);-webkit-font-smoothing:antialiased}
@@ -106,17 +99,14 @@
         /* 10. RESPONSIVE */
         @media(max-width:767px){.menu-toggle{display:block}.nav-links{display:none;position:absolute;top:100%;left:0;right:0;background:var(--color-surface);flex-direction:column;padding:32px;text-align:center;gap:32px;height:calc(100vh - 73px);border-top:1px solid var(--border-subtle)}.nav-links.active{display:flex}body.nav-open{overflow:hidden}}
         
-        /* ================= MOBILE H1 WRAP FIX (= 600 px) ================= */
+        /* MOBILE H1 WRAP FIX (= 600px) */
         @media (max-width: 600px){
             .hero h1{
-                /* let the word break anywhere it needs to */
-                overflow-wrap:anywhere;      /* modern property */
-                word-break:break-word;       /* older fallback   */
-
-                /* down-scale slightly so “UNSHAKEABLE” fits more comfortably */
+                overflow-wrap:anywhere;
+                word-break:break-word;
                 font-size:clamp(2rem, 9vw + 0.4rem, 2.6rem);
-                letter-spacing:-0.01em;      /* tighten a touch at small sizes */
-                line-height:1.25;            /* keeps two-line stack tidy      */
+                letter-spacing:-0.01em;
+                line-height:1.25;
             }
         }
     </style>
@@ -135,34 +125,34 @@
         </div>
     </nav>
 
-    <!-- HERO ? tactical, future-self, problem-solution copy (Toolkit §§4–6) -->
+    <!-- HERO -->
     <header class="hero">
         <div class="container">
             <div class="hero-tagline">REBEL • SYSTEMISE • PROVE</div>
-            <h1>UNSHAKEABLE CONFIDENCE.<br><span class="text-gradient">BUILT SYSTEMATICALLY.</span></h1>
+            <h1>UNSHAKEABLE CONFIDENCE.<br><span class="text-gradient">BUILT SYSTEMATICALLY.</span></h1>
             <p class="lead">Engineered loneliness profits from your self-doubt. Our blueprints flip the script—turning approach anxiety, fragile identity, and social hesitation into <strong>tactical advantages you command</strong>.</p>
             <a href="courses.html" class="btn-primary">ACTIVATE YOUR BLUEPRINT</a>
         </div>
     </header>
 
     <main>
-        <!-- PROBLEM SECTION ? action language -->
+        <!-- PROBLEM SECTION -->
         <section class="section section-divider container">
             <div class="section-header">
-                <h2>Engineered Loneliness Ends Now</h2>
+                <h2>Engineered Loneliness Ends Now</h2>
                 <p class="lead">Each datapoint below fuels a trillion-dollar distraction economy. Our mission: <strong>shut the revenue stream down—one rebuilt man at a time</strong>.</p>
             </div>
             <div class="grid-container grid-3">
                 <div class="stat-card"><p class="stat-number">48%</p><p>of young men feel lonely <em>always</em> or <em>frequently</em>.</p></div>
-                <div class="stat-card"><p class="stat-number">6 in 10</p><p>young men are single—double the rate of young women.</p></div>
-                <div class="stat-card"><p class="stat-number">-70%</p><p>drop in male-reported partners by age 30 since 2000.</p></div>
+                <div class="stat-card"><p class="stat-number">6 in 10</p><p>young men are single—double the rate of young women.</p></div>
+                <div class="stat-card"><p class="stat-number">-70%</p><p>drop in male-reported partners by age 30 since 2000.</p></div>
             </div>
         </section>
 
-        <!-- OPERATING SYSTEM ? tactical framing -->
+        <!-- OPERATING SYSTEM -->
         <section class="section section-divider container">
             <div class="section-header">
-                <h2>Your Tactical Operating System</h2>
+                <h2>Your Tactical Operating System</h2>
                 <p class="lead">Our code is non-negotiable: <span class="text-accent" style="font-weight:700">Command emotions. Build systems. Lead with ruthless empathy.</span></p>
             </div>
             <div class="grid-container grid-3">
@@ -184,10 +174,7 @@
             </div>
         </section>
 
-        <!-- =====================================================================
-             NEW ADDITION #2: The Credibility Anchor & Tangibility Hook
-             This section builds trust by explaining the 'why' behind the system.
-             ===================================================================== -->
+        <!-- CREDIBILITY ANCHOR & TANGIBILITY -->
         <section class="section section-divider container">
             <div class="section-header">
                 <h2>Why a System Annihilates 'Tricks'</h2>
@@ -220,7 +207,6 @@
             </div>
         </section>
 
-
         <!-- MANIFESTO -->
         <section class="manifesto-section">
             <div class="container manifesto-quote">
@@ -229,10 +215,40 @@
             </div>
         </section>
 
-        <!-- PILLARS SECTION ? future-self framing -->
+        <!-- FOUR THEME LEARNING SYSTEM -->
+        <section class="section section-divider container">
+            <div class="section-header">
+                <h2>Our Four-Theme Learning System</h2>
+                <p class="lead">Complete masculine reconstruction isn't random—it follows a proven sequence. Our curriculum is built on four strategic themes that transform you from the inside out.</p>
+            </div>
+            <div class="grid-container grid-4" style="gap:20px">
+                <div class="info-card" style="text-align:center">
+                    <i data-lucide="brain" class="icon" width="40" height="40"></i>
+                    <h4>THEME 1: CORE MINDSET</h4>
+                    <p><strong>Available Now</strong><br>Internal frame, abundance mentality, outcome independence, and unshakeable identity.</p>
+                </div>
+                <div class="info-card" style="text-align:center;opacity:0.7">
+                    <i data-lucide="target" class="icon" width="40" height="40"></i>
+                    <h4>THEME 2: INTERACTION</h4>
+                    <p><strong>Coming Soon</strong><br>Approach mechanics, reading social cues, conversation mastery, and escalation tactics.</p>
+                </div>
+                <div class="info-card" style="text-align:center;opacity:0.7">
+                    <i data-lucide="heart" class="icon" width="40" height="40"></i>
+                    <h4>THEME 3: EMOTIONAL DYNAMICS</h4>
+                    <p><strong>Coming Soon</strong><br>Female psychology, emotional volatility, comfort building, and handling tests.</p>
+                </div>
+                <div class="info-card" style="text-align:center;opacity:0.7">
+                    <i data-lucide="trending-up" class="icon" width="40" height="40"></i>
+                    <h4>THEME 4: SKILL MASTERY</h4>
+                    <p><strong>Coming Soon</strong><br>Practice protocols, experiential learning, mentorship, and systematic improvement.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- PILLARS SECTION -->
         <section class="section container">
             <div class="section-header">
-                <h2>The Four Pillars of Masculine Mastery</h2>
+                <h2>The Four Pillars of Masculine Mastery</h2>
                 <p class="lead">No hacks—just a step-by-step evolution toward the man your future self already is.</p>
             </div>
             <div class="grid-container grid-3" style="--grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:32px">
@@ -243,10 +259,10 @@
             </div>
         </section>
 
-        <!-- FINAL CTA ? urgency & future-self language -->
+        <!-- FINAL CTA -->
         <section class="section section-divider container">
             <div class="final-cta">
-                <h2 class="text-accent">COMMAND YOUR FUTURE SELF</h2>
+                <h2 class="text-accent">COMMAND YOUR FUTURE SELF</h2>
                 <p class="lead" style="max-width:60ch;margin:16px auto 32px">Our course library is a complete confidence reconstruction system. Every module delivers actionable drills, brotherhood accountability, and measurable milestones.</p>
                 <a href="courses.html" class="btn-primary" style="padding:20px 40px;font-size:1.25rem">ENTER THE ARMORY</a>
                 <p style="font-size:.9rem;color:var(--color-text-muted);margin-top:16px;margin-bottom:0">Stop surviving. Start commanding—today.</p>
@@ -257,7 +273,7 @@
     <footer class="section-divider">
         <div class="container" style="text-align:center">
             <p class="nav-logo" style="margin-bottom:16px">BOTGOSPEL</p>
-            <p>The loneliness pandemic wasn’t an accident. Your liberation won’t be either.</p>
+            <p>The loneliness pandemic wasn't an accident. Your liberation won't be either.</p>
             <p class="footer-motto" style="margin-top:16px">REBEL. SYSTEMISE. PROVE.</p>
             <p style="font-size:.8rem;margin-top:32px;color:rgba(169,175,177,.5)">© 2025 BOTGospel. All Rights Reserved.</p>
         </div>
