--- a/courses.html
+++ b/courses.html
@@ -297,7 +297,7 @@ document.addEventListener('DOMContentLoaded', () => {
         courseGrid.innerHTML = '';
 
         const courseGroups = [
-            { id: 'foundation', title: 'Foundation Courses (Free Lead Magnets)', icon: 'gift' },
+            { id: 'foundation', title: 'Foundation Courses (Free)', icon: 'gift' },
             { id: 'mindset', title: 'Protocols in the Mindset Pack', icon: 'brain-circuit' },
             { id: 'operator', title: 'Protocols in the Social Operator Pack', icon: 'target' },
             { id: 'premium', title: 'Protocols in the Premium Masterclass System', icon: 'gem' }
